fixes for new version